// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nodeConnectedWidget nodeConnectedWidget UI Component it pushes to the error page when node disconnects 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-color: #C4C4C4;
  border-radius: 8px;
  padding: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 160px;
  width: 160px;
  height: 48px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
  display: inline;
  margin: 0;
}

.c1 {
  height: 8px;
  width: 8px;
  background-color: #FC6D6F;
  border-radius: 50%;
  display: inline-block;
  margin: 4px;
  -webkit-animation: iSdllx 0.24s linear;
  animation: iSdllx 0.24s linear;
}

<div
  class="c0"
  display="inline-flex"
  height="6"
  width="9"
>
  <span
    class="c1"
  />
  <p
    class="c2"
    display="inline"
    font-family="RT-Alias-Grotesk"
    font-size="2"
    font-weight="400"
  >
    Disconnected
  </p>
</div>
`;

exports[`nodeConnectedWidget nodeConnectedWidget UI Component it renders connected state 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-color: #C4C4C4;
  border-radius: 8px;
  padding: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 160px;
  width: 160px;
  height: 48px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
  display: inline;
  margin: 0;
}

.c1 {
  height: 8px;
  width: 8px;
  background-color: #1AD08F;
  border-radius: 50%;
  display: inline-block;
  margin: 4px;
  -webkit-animation: iSdllx 0.24s linear;
  animation: iSdllx 0.24s linear;
}

<div
  class="c0"
  display="inline-flex"
  height="6"
  width="9"
>
  <span
    class="c1"
  />
  <p
    class="c2"
    display="inline"
    font-family="RT-Alias-Grotesk"
    font-size="2"
    font-weight="400"
  >
    Connected
  </p>
</div>
`;

exports[`nodeConnectedWidget nodeConnectedWidget UI Component it renders connecting state 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-color: #C4C4C4;
  border-radius: 8px;
  padding: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 160px;
  width: 160px;
  height: 48px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
  display: inline;
  margin: 0;
}

.c1 {
  height: 8px;
  width: 8px;
  background-color: #FCA703;
  border-radius: 50%;
  display: inline-block;
  margin: 4px;
  -webkit-animation: iSdllx 0.24s linear;
  animation: iSdllx 0.24s linear;
}

<div
  class="c0"
  display="inline-flex"
  height="6"
  width="9"
>
  <span
    class="c1"
  />
  <p
    class="c2"
    display="inline"
    font-family="RT-Alias-Grotesk"
    font-size="2"
    font-weight="400"
  >
    Connecting..
  </p>
</div>
`;
